--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,14 +18,14 @@ jobs:
       - run:
           name: Check and Update Dependencies
           command: |
-            npm outdated
+            npm outdated || true
             npm update
-            npm audit fix --force
-            git config --global user.email "ci-bot@example.com"
-            git config --global user.name "CI Bot"
+            npm audit fix --force || echo "npm audit fix failed, continuing..."
+            git config --global user.email "vishalgitt7@users.noreply.github.com"
+            git config --global user.name "Vishal Gitt"
             git add package.json package-lock.json
-            git commit -m "chore: update dependencies and fix vulnerabilities" || echo "No dependency updates"
-            git push origin main || echo "No changes to push"
+            git commit -m "[ci skip] chore: update dependencies and fix vulnerabilities" || echo "No dependency updates"
+            git push origin main || echo "Push failed, likely no changes or permissions issue"
       - save_cache:
           key: npm-cache-{{ checksum "package-lock.json" }}
           paths:
@@ -54,6 +54,7 @@ jobs:
       - restore_cache:
           keys:
             - npm-cache-{{ checksum "package-lock.json" }}
+           }
             - npm-cache-
       - node/install-packages:
           pkg-manager: npm
@@ -127,13 +128,20 @@ jobs:
 workflows:
   build-and-test:
     jobs:
-      - update-dependencies
-      - test-node:
-          requires:
-            - update-dependencies
+      - test-node
       - build-node:
           requires:
             - test-node
       - build-and-push-docker:
           requires:
             - build-node
+  update-dependencies-weekly:
+    triggers:
+      - schedule:
+          cron: "0 0 * * 0" # Run every Sunday at midnight UTC
+          filters:
+            branches:
+              only:
+                - main
+    jobs:
+      - update-dependencies
