--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
       "react-app/jest"
     ]
   },
+  "overrides": {
+    "@babel/traverse": "7.23.2"
+  },
   "browserslist": {
     "production": [
       ">0.2%",
