--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "overrides": {
+    "@babel/traverse": "7.23.2"
+  },
   "eslintConfig": {
     "extends": [
       "react-app",
