--- a/.github/workflows/weekly-update.yml
+++ b/.github/workflows/weekly-update.yml
@@ -2,7 +2,7 @@ name: Weekly Dependency Update
 
 on:
   schedule:
-    - cron: '0 0 * * 0' # Every Sunday at midnight UTC
+    - cron: '0 0 * * 0' # Every Sunday at midnight UTc
   workflow_dispatch:
 
 jobs:
