--- a/Kubernetes/deployment.yaml
+++ b/Kubernetes/deployment.yaml
@@ -16,6 +16,6 @@ spec:
     spec:
       containers:
       - name: zomato
-        image: kastrov/zomato:latest
+        image: vishaldock7/zomato_clone:latest
         ports:
         - containerPort: 3000
